// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicsPage Should match existing snapshot for initial visualization 'anatomogram' 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <Grid
    centered={true}
    columns={2}
    padded={true}
    stackable={true}
    stretched={false}
  >
    <GridColumn
      key="dataset-visualization-0"
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <Component
        iconSrc="undefinedundefined"
        species="homo_sapiens"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DynamicsPage Should match existing snapshot for initial visualization 'spring' 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <Grid
    centered={true}
    columns={2}
    padded={true}
    stackable={true}
    stretched={false}
  >
    <GridColumn
      key="dataset-visualization-0"
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <Component
        datasetLocation="datasets/hpc_sf2/full/analyses//sample-dataset"
        datasetsURI="undefined/datasets"
        iconSrc="undefinedundefined"
        isFullPage={true}
        springSrc="undefined/undefined"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DynamicsPage Should match existing snapshot for initial visualization 'tfjs-tsne' 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <Grid
    centered={true}
    columns={2}
    padded={true}
    stackable={true}
    stretched={false}
  >
    <GridColumn
      key="dataset-visualization-0"
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <Component
        datasetLocation="undefined/datasets/hpc_sf2/full/analyses/"
        iconSrc="undefinedundefined"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DynamicsPage Should match existing snapshot for initial visualization 'umap' 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <Grid
    centered={true}
    columns={2}
    padded={true}
    stackable={true}
    stretched={false}
  >
    <GridColumn
      key="dataset-visualization-0"
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <GridColumn>
        Loading...
      </GridColumn>
    </GridColumn>
  </Grid>
</div>
`;

exports[`DynamicsPage Should match existing snapshot when given an Anatomogram analysis. 1`] = `null`;

exports[`DynamicsPage Should match existing snapshot when given an analysis. 1`] = `
<Connect(UnconnectedDynamicsPage)
  vignettes={
    Array [
      Object {
        "_id": "bbdecade-0000-0000-0001-a1234567890b",
        "authors": Array [],
        "dataset": "",
        "icon": "",
        "name": "",
        "summary": "Rise Against Viz",
        "visualizations": Array [
          "bbfacade-0000-0000-0001-a1234567890b",
        ],
      },
    ]
  }
  visualizations={
    Array [
      Object {
        "_id": "bbfacade-0000-0000-0001-a1234567890b",
        "authors": Array [
          "Franz Ferdinand",
        ],
        "citations": Array [
          Object {
            "fullCitation": "A full citation",
            "link": "A link",
          },
        ],
        "compatibleData": Array [],
        "exampleDataset": "bbdeeded-0000-0000-0001-a1234567890b",
        "isOriginal": true,
        "labels": Array [],
        "name": "",
        "repo": Object {
          "lastUpdate": "03/13/19",
          "link": "the-dark-of-the-matinée",
          "version": "",
        },
        "summary": "",
        "version": "",
      },
      Object {
        "_id": "bbfacade-0000-0000-0002-a1234567890b",
        "authors": Array [
          "Eminem",
        ],
        "citations": Array [
          Object {
            "fullCitation": "A full citation",
            "link": "A link",
          },
        ],
        "compatibleData": Array [],
        "exampleDataset": "bbdeeded-0000-0000-0002-a1234567890b",
        "isOriginal": false,
        "labels": Array [],
        "name": "",
        "repo": Object {
          "lastUpdate": "03/13/19",
          "link": "The Ringer",
          "version": "",
        },
        "summary": "",
        "version": "",
      },
    ]
  }
>
  <UnconnectedDynamicsPage
    dataset={null}
    dispatchDatasetFetch={[Function]}
    pathname="/dynamics"
    search="?analysis=aaaaaaaa-0000-0000-0001-a1234567890b"
    vignettes={Array []}
    visualizations={Array []}
  >
    <div
      style={
        Object {
          "padding": "20px",
        }
      }
    >
      <Grid
        centered={true}
        columns={2}
        padded={true}
        stackable={true}
        stretched={false}
      >
        <div
          className="ui centered stackable padded two column grid"
        >
          <GridColumn>
            <div
              className="column"
            >
              No visualizations!
            </div>
          </GridColumn>
        </div>
      </Grid>
    </div>
  </UnconnectedDynamicsPage>
</Connect(UnconnectedDynamicsPage)>
`;

exports[`DynamicsPage Should match existing snapshot when hooked up to a Redux store. 1`] = `
<Connect(UnconnectedDynamicsPage)
  vignettes={
    Array [
      Object {
        "_id": "bbdecade-0000-0000-0001-a1234567890b",
        "authors": Array [],
        "dataset": "",
        "icon": "",
        "name": "",
        "summary": "Rise Against Viz",
        "visualizations": Array [
          "bbfacade-0000-0000-0001-a1234567890b",
        ],
      },
    ]
  }
  visualizations={
    Array [
      Object {
        "_id": "bbfacade-0000-0000-0001-a1234567890b",
        "authors": Array [
          "Franz Ferdinand",
        ],
        "citations": Array [
          Object {
            "fullCitation": "A full citation",
            "link": "A link",
          },
        ],
        "compatibleData": Array [],
        "exampleDataset": "bbdeeded-0000-0000-0001-a1234567890b",
        "isOriginal": true,
        "labels": Array [],
        "name": "",
        "repo": Object {
          "lastUpdate": "03/13/19",
          "link": "the-dark-of-the-matinée",
          "version": "",
        },
        "summary": "",
        "version": "",
      },
      Object {
        "_id": "bbfacade-0000-0000-0002-a1234567890b",
        "authors": Array [
          "Eminem",
        ],
        "citations": Array [
          Object {
            "fullCitation": "A full citation",
            "link": "A link",
          },
        ],
        "compatibleData": Array [],
        "exampleDataset": "bbdeeded-0000-0000-0002-a1234567890b",
        "isOriginal": false,
        "labels": Array [],
        "name": "",
        "repo": Object {
          "lastUpdate": "03/13/19",
          "link": "The Ringer",
          "version": "",
        },
        "summary": "",
        "version": "",
      },
    ]
  }
>
  <UnconnectedDynamicsPage
    dataset={null}
    dispatchDatasetFetch={[Function]}
    pathname="/dynamics"
    search="?id=psycho-jukebox-vignette-id"
    vignettes={Array []}
    visualizations={Array []}
  >
    <div
      style={
        Object {
          "padding": "20px",
        }
      }
    >
      <Grid
        centered={true}
        columns={2}
        padded={true}
        stackable={true}
        stretched={false}
      >
        <div
          className="ui centered stackable padded two column grid"
        >
          <GridColumn>
            <div
              className="column"
            >
              No visualizations!
            </div>
          </GridColumn>
        </div>
      </Grid>
    </div>
  </UnconnectedDynamicsPage>
</Connect(UnconnectedDynamicsPage)>
`;

exports[`DynamicsPage Should match existing snapshot when no props are provided. 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <Grid
    centered={true}
    columns={2}
    padded={true}
    stackable={true}
    stretched={false}
  >
    <GridColumn>
      No visualizations!
    </GridColumn>
  </Grid>
</div>
`;
